--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -3,179 +3,182 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="아이템을 강화합니다."
-            android:textSize="20sp"/>
-        <ImageView
-            android:id="@+id/equipment_image"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/mongbel" />
-        <TextView
-            android:id="@+id/equipment_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="장비를 추가해주세요."/>
-        <FrameLayout
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="270dp"
-                android:layout_marginHorizontal="20dp"
-                android:padding="10dp"
-                android:background="#9C000000">
-                <TextView
-                    android:id="@+id/info"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="STR : +69(0 +69)"
-                    android:textSize="20sp"
-                    android:textColor="#F1F1F1"/>
-            </ScrollView>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="아이템을 강화합니다."
+                android:textSize="20sp"/>
             <ImageView
-                android:id="@+id/resultEffect"
+                android:id="@+id/equipment_image"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_margin="10dp"
+                android:src="@drawable/mongbel" />
+            <TextView
+                android:id="@+id/equipment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="장비를 추가해주세요."/>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:padding="10dp"
+                    android:background="#9C000000">
+                    <TextView
+                        android:id="@+id/info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="STR : +69(0 +69)"
+                        android:textSize="20sp"
+                        android:textColor="#F1F1F1"/>
+                </ScrollView>
+
+            </FrameLayout>
+
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-        </FrameLayout>
+                android:scrollbars="none"
+                android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_0"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/scroll_basic"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_0"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_1"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/scroll_white"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_1"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_2"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/scroll_gold_hammer"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_2"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_3"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/scroll_innocent"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_3"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_4"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/scroll_chaos"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_4"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
 
-        <HorizontalScrollView
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:onClick="runEnhance"
+                android:text="강화하기"/>
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:text="뒤로가기"
+                android:onClick="goBack"/>
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/resultEffect"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:layout_margin="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_0"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_basic"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_0"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_1"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_white"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_1"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_2"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_gold_hammer"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_2"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_innocent"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_3"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:id="@+id/scroll_button_4"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="20dp"
-                        android:scaleType="fitCenter"
-                        android:onClick="select"
-                        android:src="@drawable/scroll_chaos"/>
-                    <ImageView
-                        android:id="@+id/scroll_check_4"
-                        android:layout_width="90dp"
-                        android:layout_height="90dp"
-                        android:padding="15dp"
-                        android:scaleType="fitCenter"
-                        android:visibility="invisible"
-                        android:src="@drawable/ui_checked"/>
-                </FrameLayout>
-            </LinearLayout>
-        </HorizontalScrollView>
+            android:scaleType="fitCenter"/>
+    </FrameLayout>
 
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:onClick="runEnhance"
-            android:text="강화하기"/>
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="뒤로가기"
-            android:onClick="goBack"/>
-
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
